# cards-prototype

./: flake.nix
.github/workflows/: tauri.yml
src-astro/: .prettierignore  package.json  pnpm-lock.yaml
src-astro/src-tauri/: Cargo.toml  tauri.conf.json
src-astro/src-tauri/src/: main.rs
src-astro/src/components/Main/: Main.astro  Main.ts
src-astro/src/pages/: index.astro  index.ts
