[package]
name = "cards"
version = "0.0.0"
description = "Cards"
authors = ["Liam Garriga <liam@garriga.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
tauri-plugin-shell = "2.0.0-beta.9"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
local-ip-address = "0.6.1"
# tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "net"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
